--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Render Static Site</h1>
     <ol>
         <li><strong>Name: </strong>Grace Chen</li>
-        <li><strong>GitHub Location: </strong>link</li>
-        <li><strong>Terpconnect Location: </strong>link</li>
+        <li><strong>GitHub Location: </strong><a href="https://github.com/jjgacer/render">https://github.com/jjgacer/render</a></li>
+        <li><strong>Terpconnect Location: </strong><a href="https://www.terpconnect.umd.edu/~gpc7163/terpconnect_static_site/">https://www.terpconnect.umd.edu/~gpc7163/terpconnect_static_site/</a></li>
     </ol>
 </body>
